put banner before section named "about," not "one"

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2597,9 +2597,9 @@
 			border-top: 0;
 		}
 
-/* One */
+/* One --> now "About" */
 
-	#one:before {
+	#about:before {
 		background-image: url("../../images/banner.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
