make banner image centered

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2601,7 +2601,7 @@
 
 	#about:before {
 		background-image: url("../../images/banner.jpg");
-		background-position: top right;
+		background-position: top center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		content: '';
